--- a/video_download.ipynb
+++ b/video_download.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "79e0e1a8",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,22 +34,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4eef3911",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 17/17 [08:49<00:00, 31.15s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "for url in tqdm.tqdm(urls):\n",
     "    yt = pytube.YouTube(url)\n",
     "    yt.streams.filter(progressive=True, file_extension=\"mp4\").order_by(\"resolution\").desc().first().download(save_dir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "soprize",
+   "display_name": "youtube_crawl",
    "language": "python",
-   "name": "soprize"
+   "name": "youtube_crawl"
   },
   "language_info": {
    "codemirror_mode": {
